# zeam-ai-poly

./: .env.template  .gitignore  Makefile  README.md  main.py  pyproject.toml  workspace.toml
.github/workflows/: tests.yml
bases/zeam/api/: main.py  pyproject.toml
bases/zeam/api/api/: health.py  redis.py  scheduler.py
bases/zeam/api/api/v1/: recommend.py
bases/zeam/api/src/zeam/api/: main.py
bases/zeam/api/src/zeam/api/api/: health.py  redis.py
bases/zeam/api/src/zeam/api/api/v1/: recommend.py
bases/zeam/api/tests/: test_api.py  test_curated_api.py  test_generic_api.py  test_redis_api.py
bases/zeam/beat/: __main__.py  main.py  pyproject.toml  schedule.py
bases/zeam/worker/: __main__.py  main.py  pyproject.toml  tasks.py
components/zeam/analytics/: curated_content.py  pyproject.toml
components/zeam/analytics/sql/: curated_content_popularity_by_platform.sql
components/zeam/analytics/tests/: test_curated_content.py
components/zeam/celery_core/: core.py  pyproject.toml
components/zeam/celery_core/sql/: curated_content_popularity.sql
components/zeam/celery_core/tests/: README.md
components/zeam/celery_core/tests/workers/: test_curated_content_worker.py
components/zeam/celery_core/workers/: __init__.py  base_worker.py  curated_content_worker.py
components/zeam/config/: core.py  pyproject.toml
components/zeam/popularity/: pyproject.toml
components/zeam/popularity/domain/: schemas.py
components/zeam/popularity/src/zeam/popularity/core/: config.py  database.py  redis.py
components/zeam/redis/: __init__.py  pyproject.toml
components/zeam/redis_client/: __init__.py  client.py  config.py  pyproject.toml
components/zeam/redshift/: __init__.py  config.py  database.py  pyproject.toml
components/zeam/redshift/src/zeam/redshift/: database.py
components/zeam/scheduler/: pyproject.toml
components/zeam/scheduler/sql/: README.md  channel_popularity.sql  channels_by_dma.sql  top_streams.sql  weekly_stats.sql
components/zeam/scheduler/src/zeam/scheduler/: beat_schedule.py  celery_app.py
components/zeam/scheduler/src/zeam/scheduler/sql/: dummy.sql
components/zeam/scheduler/src/zeam/scheduler/workers/: __init__.py  channel_stats_worker.py  channels_by_dma_worker.py  curated_content_worker.py  dummy_worker.py  weekly_stats_worker.py
components/zeam/scheduler/tests/: README.md
components/zeam/scheduler/tests/workers/: test_curated_content_worker.py
components/zeam/scheduler/tests/workers/channels_by_dma/: README.md  test_channels_by_dma_worker.py
components/zeam/scheduler/tests/workers/dummy/: README.md  test_dummy_worker.py
components/zeam/scheduler/tests/workers/weekly_stats/: README.md  test_weekly_stats_worker.py
components/zeam/scheduler/workers/: dummy_worker.py  example_worker.py
components/zeam/worker_registry/: __init__.py  core.py  curated_content.py  curated_content_by_platform.py  pyproject.toml
development/zeam/dev/: curated_content_generator.py  pyproject.toml
projects/popularity-api/: Dockerfile  pyproject.toml
projects/popularity-beat/: Dockerfile  pyproject.toml
projects/popularity-flower/: Dockerfile  pyproject.toml
projects/popularity-worker/: Dockerfile  pyproject.toml
projects/recommender-background-service-monitor/: pyproject.toml
projects/recommender-background-service-scheduler/: pyproject.toml
projects/recommender-background-service-worker/: Dockerfile  pyproject.toml
projects/recommender-monitor/: pyproject.toml
projects/recommender-scheduler/: pyproject.toml
projects/recommender-service/: pyproject.toml
projects/recommender-worker/: pyproject.toml
test/components/zeam/redis/: test_core.py
test/components/zeam/redis_client/: test_client.py
test/components/zeam/redshift/: test_core.py
