[project]
name = "zeam-ai-poly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "polylith-cli>=1.40.0",
]

[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs=["components","bases", "development","."]

[tool.uv.build-backend]
namespace=true
module-name="zeam"
module-root=""

[tool.uv.workspace]
members = [
    "components/zeam/config",
    "components/zeam/worker_registry",
    "components/zeam/redshift",
    "components/zeam/redis_client",
    "components/zeam/analytics",
    "bases/zeam/api",
    "bases/zeam/worker",
    "bases/zeam/beat",
    "projects/popularity-api",
    "projects/popularity-worker",
    "projects/popularity-beat",
    "projects/popularity-flower",
    "development/zeam/dev",
]



