[project]
name = "popularity-beat"
version = "0.1.0"
description = "Celery Beat Project"
dependencies = [
    "zeam-beat",
    "zeam-celery-core",
    "zeam-popularity",
    "celery[redis]>=5.4.0",
    "zeam-redshift",
    "zeam-redis-client",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-beat = { workspace = true }
zeam-celery-core = { workspace = true }
zeam-popularity = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.polylith]
project = "popularity-beat"

[tool.polylith.bricks]
"../../bases/zeam/beat" = "zeam/beat"
"../../components/zeam/celery_core" = "zeam/celery_core"
"../../components/zeam/popularity" = "zeam/popularity"
"../../components/zeam/redshift" = "zeam/redshift"
"../../components/zeam/redis_client" = "zeam/redis_client"

