[project]
name = "popularity-flower"
version = "0.1.0"
description = "Flower Monitoring Project"
dependencies = [
    "zeam-celery-core",
    "zeam-popularity",
    "flower>=2.0.1",
    "redis>=5.0.1",
    "zeam-redshift",
    "zeam-redis-client",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-celery-core = { workspace = true }
zeam-popularity = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.polylith]
project = "popularity-flower"

[tool.polylith.bricks]
"../../components/zeam/celery_core" = "zeam/celery_core"
"../../components/zeam/popularity" = "zeam/popularity"
"../../components/zeam/redshift" = "zeam/redshift"
"../../components/zeam/redis_client" = "zeam/redis_client"

