[project]
name = "popularity-flower"
version = "0.1.0"
description = "Flower Monitoring Project"
dependencies = [
    "zeam-worker-registry",
    "zeam-worker",
    "zeam-config",
    "flower>=2.0.1",
    "redis>=5.0.1",
    "zeam-redshift",
    "zeam-redis-client",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-worker-registry = { workspace = true }
zeam-worker = { workspace = true }
zeam-config = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.polylith]
project = "popularity-flower"

[tool.polylith.bricks]
"../../components/zeam/worker_registry" = "zeam/worker_registry"
"../../bases/zeam/worker" = "zeam/worker"
"../../components/zeam/config" = "zeam/config"
"../../components/zeam/redshift" = "zeam/redshift"
"../../components/zeam/redis_client" = "zeam/redis_client"

