[project]
name = "popularity-worker"
version = "0.1.0"
description = "Celery Worker Project"
dependencies = [
    "zeam-worker",
    "zeam-scheduler",
    "zeam-popularity",
    "celery[redis]>=5.4.0",
    "redis>=5.0.1",
    "redshift-connector>=2.0.910",
    "pydantic>=2.6.0",
    "pandas>=2.1.4",
    "python-json-logger>=2.0.7",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-worker = { workspace = true }
zeam-scheduler = { workspace = true }
zeam-popularity = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.polylith]
project = "popularity-worker"

[tool.polylith.bricks]
"../../bases/zeam/worker" = "zeam/worker"
"../../components/zeam/scheduler" = "zeam/scheduler"
"../../components/zeam/popularity" = "zeam/popularity"
