[project]
name = "popularity-worker"
version = "0.1.0"
description = "Celery Worker Project"
dependencies = [
    "zeam-celery-core",
    "zeam-worker",
    "zeam-analytics",
    "zeam-popularity",
    "celery[redis]>=5.4.0",
    "redis>=5.0.1",
    "redshift-connector>=2.0.910",
    "pydantic>=2.6.0",
    "pandas>=2.1.4",
    "python-json-logger>=2.0.7",
    "zeam-redshift",
    "zeam-redis-client",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-worker = { workspace = true }
zeam-analytics = { workspace = true }
zeam-celery-core = { workspace = true }
zeam-popularity = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.polylith]
project = "popularity-worker"

[tool.polylith.bricks]
"../../bases/zeam/worker" = "zeam/worker"
"../../components/zeam/celery_core" = "zeam/celery_core"
"../../components/zeam/popularity" = "zeam/popularity"
"../../components/zeam/redshift" = "zeam/redshift"
"../../components/zeam/redis_client" = "zeam/redis_client"

