[project]
name = "zeam-api"
version = "0.1.0"
description = "API Base"
dependencies = [
    "zeam-popularity",
    "fastapi>=0.109.0",
    "celery[redis]>=5.4.0",
    "pytest>=8.0.0",
    "zeam-redshift",
    "zeam-redis-client",
    "zeam-celery-core",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-popularity = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }
zeam-celery-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/api"

[dependency-groups]
test = [
    "pytest>=8.0.0",
]

[tool.polylith]
brick = "base:api"
