[project]
name = "zeam-beat"
version = "0.1.0"
description = "Beat Base"
dependencies = [
    "zeam-scheduler",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-scheduler = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zeam"]
