[project]
name = "zeam-beat"
version = "0.1.0"
description = "Beat Base"
dependencies = [
    "zeam-celery-core",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-celery-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/beat"

[tool.polylith]
brick = "base:beat"
