[project]
name = "zeam-worker"
version = "0.1.0"
description = "Worker Base"
dependencies = [
    "zeam-celery-core",
    "zeam-analytics",
    "zeam-redis-client",
    "celery[redis]>=5.4.0",
    "pandas>=2.1.4",
    "python-json-logger>=2.0.7",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-celery-core = { workspace = true }
zeam-analytics = { workspace = true }
zeam-redis-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/worker"

[tool.polylith]
brick = "base:worker"
