[project]
name = "zeam-analytics"
version = "0.1.0"
description = "Analytics queries and logic"
dependencies = [
    "zeam-redshift",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-redshift = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/analytics"

[dependency-groups]
test = [
    "pytest>=8.0.0",
]

[tool.polylith]
brick = "component:analytics"
