[project]
name = "zeam-celery-core"
version = "0.1.0"
description = "Celery core logic"
dependencies = [
    "zeam-popularity",
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",
    "pandas>=2.1.4",
    "python-json-logger>=2.0.7",
    "celery>=5.3.6",
    "zeam-popularity",
    "zeam-redshift",
    "zeam-redis-client",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-popularity = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/celery_core"

[dependency-groups]
test = [
    "pytest>=8.0.0",
]

[tool.polylith]
brick = "component:celery_core"
