[project]
name = "zeam-config"
version = "0.1.0"
description = "Core configuration and logic"
dependencies = [
    "pydantic-settings>=2.1.0",
    "pydantic>=2.6.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/config"

[tool.polylith]
brick = "component:config"

