[project]
name = "zeam-popularity"
version = "0.1.0"
description = "Core popularity logic"
dependencies = [
    "pydantic-settings>=2.1.0",
    "redshift-connector>=2.0.910",
    "redis>=5.0.1",
    "pydantic>=2.6.0",
    "zeam-redshift",
    "zeam-redis",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zeam"]

[tool.uv.sources]
zeam-redshift = { workspace = true }
zeam-redis = { workspace = true }


[tool.polylith]
brick = "component:popularity"
