[project]
name = "zeam-popularity"
version = "0.1.0"
description = "Core popularity logic"
dependencies = [
    "pydantic-settings>=2.1.0",
    "redshift-connector>=2.0.910",
    "redis>=5.0.1",
    "pydantic>=2.6.0",
    "zeam-redshift",
    "zeam-redis-client",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/popularity"

[tool.uv.sources]
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }


[tool.polylith]
brick = "component:popularity"
