[project]
name = "zeam-redis-client"
version = "0.1.0"
description = "Redis client logic"
dependencies = [
    "redis>=5.0.1",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.6.0",
    "zeam-config",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "zeam/redis_client"

[tool.uv.sources]
zeam-config = { workspace = true }

