[project]
name = "zeam-redshift"
version = "0.1.0"
description = "Redshift database logic"
dependencies = [
    "redshift-connector>=2.0.910",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.6.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zeam"]
