[project]
name = "zeam-scheduler"
version = "0.1.0"
description = "Scheduler logic"
dependencies = [
    "zeam-popularity",
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",
    "pandas>=2.1.4",
    "python-json-logger>=2.0.7",
    "celery>=5.3.6",
    "zeam-popularity",
    "zeam-redshift",
    "zeam-redis",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-popularity = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zeam"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
]

[tool.polylith]
brick = "component:scheduler"
