[project]
name = "dev"
version = "0.1.0"
description = "Development environment"
dependencies = [
    "zeam-api",
    "zeam-worker",
    "zeam-beat",
    "zeam-popularity",
    "zeam-scheduler",
    "ipython>=9.9.0",
    "fastapi",
    "uvicorn",
    "redis",
    "celery",
    "pytest>=8.0.0",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-api = { workspace = true }
zeam-worker = { workspace = true }
zeam-beat = { workspace = true }
zeam-popularity = { workspace = true }
zeam-scheduler = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]
