[project]
name = "dev"
version = "0.1.0"
description = "Development environment"
dependencies = [
    "zeam-api",
    "zeam-worker",
    "zeam-beat",
    "zeam-popularity",
    "zeam-scheduler",
    "zeam-redshift",
    "zeam-redis-client",
    "ipython>=9.9.0",
    "fastapi",
    "uvicorn",
    "redis",
    "celery",
    "pytest>=8.0.0",
    "httpx",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-popularity = { workspace = true }
zeam-scheduler = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }
zeam-api = { workspace = true }
zeam-worker = { workspace = true }
zeam-beat = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.polylith]
project = "development"

[tool.polylith.bricks]
"../../../bases/zeam/api" = "zeam/api"
"../../../bases/zeam/worker" = "zeam/worker"
"../../../bases/zeam/beat" = "zeam/beat"
"../../../components/zeam/popularity" = "zeam/popularity"
"../../../components/zeam/scheduler" = "zeam/scheduler"
"../../../components/zeam/redshift" = "zeam/redshift"
"../../../components/zeam/redis_client" = "zeam/redis_client"
