[project]
name = "dev"
version = "0.1.0"
description = "Development environment"
dependencies = [
    "zeam-api",
    "zeam-api",
    "zeam-worker",
    "zeam-beat",
    "zeam-config",
    "zeam-worker-registry",
    "zeam-redshift",
    "zeam-redis-client",
    "zeam-analytics",
    "ipython>=9.9.0",
    "fastapi",
    "uvicorn",
    "redis",
    "celery",
    "pytest>=8.0.0",
    "httpx",
]
requires-python = ">=3.12"

[tool.uv.sources]
zeam-config = { workspace = true }
zeam-worker-registry = { workspace = true }
zeam-redshift = { workspace = true }
zeam-redis-client = { workspace = true }
zeam-analytics = { workspace = true }
zeam-api = { workspace = true }
zeam-worker = { workspace = true }
zeam-beat = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.polylith]
project = "development"

[tool.polylith.bricks]
"../../../bases/zeam/api" = "zeam/api"
"../../../bases/zeam/worker" = "zeam/worker"
"../../../bases/zeam/beat" = "zeam/beat"
"../../../components/zeam/config" = "zeam/config"
"../../../components/zeam/worker_registry" = "zeam/worker_registry"
"../../../components/zeam/redshift" = "zeam/redshift"
"../../../components/zeam/redis_client" = "zeam/redis_client"
"../../../components/zeam/analytics" = "zeam/analytics"
